# elaspect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/crameri_et_al_2012/: case1.prm
benchmarks/duretz_et_al_2018/: test1.prm  test4.prm
benchmarks/duretz_et_al_2020/: compression.prm  extension.prm
benchmarks/gerya_2019/: gerya_2019.prm
benchmarks/slope_stability/: CMakeLists.txt  slope_stability.cc  slope_stability.prm
benchmarks/stress_build-up/: stress_build-up.prm
benchmarks/strip_footing/: CMakeLists.txt  strip_footing.cc  strip_footing.prm  strip_footing_ale.prm
cmake/: ElaspectConfig.cmake.in  elAspectConfig.cmake.in  fpe_check.cmake
cmake/modules/: FindNETCDF.cmake
include/elaspect/: fe_variable_collection.h  global.h  introspection.h  parameters.h  plugins.h  quadrature_point_data.h  simulator.h  simulator_access.h  simulator_signals.h  structured_data.h  utilities.h
include/elaspect/boundary_composition/: function.h  initial_composition.h  interface.h
include/elaspect/boundary_heat_flux/: function.h  interface.h
include/elaspect/boundary_temperature/: function.h  initial_temperature.h  interface.h
include/elaspect/boundary_traction/: interface.h  zero_traction.h
include/elaspect/boundary_velocity/: function.h  interface.h  zero_velocity.h
include/elaspect/geometry_model/: box.h  interface.h  sphere.h  spherical_shell.h
include/elaspect/gravity_model/: interface.h  radial.h  vertical.h
include/elaspect/heating_model/: function.h  interface.h  latent_heat.h  shear_heating.h
include/elaspect/initial_composition/: function.h  interface.h
include/elaspect/initial_temperature/: function.h  interface.h
include/elaspect/initial_topography/: ascii_data.h  function.h  interface.h  zero_topography.h
include/elaspect/material_model/: average.h  handler.h  io_interface.h  utilities.h
include/elaspect/material_model/basic_properties/: interface.h  simple.h
include/elaspect/material_model/plasticity/: drucker_prager.h  drucker_prager.h.old  interface.h
include/elaspect/material_model/viscosity/: diffusion_dislocation.h  interface.h  simple.h
include/elaspect/mesh_deformation/: handler.h
include/elaspect/mesh_deformation/free_surface/: convection_diffusion.h  interface.h  projection.h  simple.h
include/elaspect/mesh_deformation/mesh_smoothing/: hyperelasticity.h  interface.h  laplacian.h
include/elaspect/mesh_refinement/: composition_gradient.h  composition_threshold.h  interface.h  strain_rate.h  velocity.h
include/elaspect/postprocess/: global_statistics.h  interface.h  stress_statistics.h  temperature_statistics.h  topography.h  velocity_statistics.h  visualization.h
include/elaspect/postprocess/visualization/: gravity.h  material_properties.h  partition.h  strain_rate.h
include/elaspect/simulator/assemblers/: hydro_system.h  interface.h  mechanical_system.h  qpd_system.h  solid_system.h.old  thermo_system.h
include/elaspect/termination_criteria/: end_step.h  end_time.h  interface.h
include/elaspect/time_stepping/: conduction_time_step.h  convection_time_step.h  function.h  inherited_time_step.h  interface.h
source/: fe_variable_collection.cc  global.cc  main.cc  quadrature_point_data.cc  structured_data.cc  utilities.cc
source/boundary_composition/: function.cc  initial_composition.cc  interface.cc
source/boundary_heat_flux/: function.cc  interface.cc
source/boundary_temperature/: function.cc  initial_temperature.cc  interface.cc
source/boundary_traction/: interface.cc  zero_traction.cc
source/boundary_velocity/: function.cc  interface.cc  zero_velocity.cc
source/geometry_model/: box.cc  interface.cc  sphere.cc  spherical_shell.cc
source/gravity_model/: interface.cc  radial.cc  vertical.cc
source/heating_model/: function.cc  interface.cc  latent_heat.cc  shear_heating.cc
source/initial_composition/: function.cc  interface.cc
source/initial_temperature/: function.cc  interface.cc
source/initial_topography/: ascii_data.cc  function.cc  interface.cc  zero_topography.cc
source/material_model/: average.cc  handler.cc  io_interface.cc  utilities.cc
source/material_model/basic_properties/: interface.cc  simple.cc
source/material_model/plasticity/: drucker_prager.cc  drucker_prager.cc.old  interface.cc
source/material_model/viscosity/: diffusion_dislocation.cc  interface.cc  simple.cc
source/mesh_deformation/: handler.cc
source/mesh_deformation/free_surface/: convection_diffusion.cc  interface.cc  projection.cc  simple.cc
source/mesh_deformation/mesh_smoothing/: hyperelasticity.cc  interface.cc  laplacian.cc
source/mesh_refinement/: composition_gradient.cc  composition_threshold.cc  interface.cc  strain_rate.cc  velocity.cc
source/postprocess/: composition_statistics.cc  global_statistics.cc  interface.cc  stress_statistics.cc  temperature_statistics.cc  topography.cc  velocity_statistics.cc  visualization.cc
source/postprocess/visualization/: gravity.cc  material_properties.cc  partition.cc  strain_rate.cc
source/simulator/: assembly.cc  checkpoint_restart.cc.old  core.cc  helper_functions.cc  initial_condition.cc  introspection.cc  limiters.cc  limiters.cc.bk  nullspace.cc  parameters.cc  simulator_access.cc  simulator_signals.cc  solver.cc  solver_schemes.cc
source/simulator/assemblers/: fluid.cc  interface.cc  mechanical_system.cc  qpd_system.cc  thermo_system.cc
source/termination_criteria/: end_step.cc  end_time.cc  interface.cc
source/time_stepping/: conduction_time_step.cc  convection_time_step.cc  function.cc  inherited_time_step.cc  interface.cc
